IsTrajectoireLibre() Non testé

--- a/EchecWeb/Views/Chess/Index.cshtml
+++ b/EchecWeb/Views/Chess/Index.cshtml
@@ -9,7 +9,8 @@
     //echiquier = JsonConvert.DeserializeObject(echiquier);
 }
 
-<h2 class="antoTest">Plateau</h2>
+<h2 id="antoTest">Plateau de jeu</h2>
+
     @for (int i = 0; i < 8; i++)
     {
         <div>
@@ -144,4 +145,8 @@
         }
         </div>
     }
+
+<script>
+
+</script>
 
