Début de sélection de coordonnées

--- a/EchecWeb/Views/Chess/SelectionEnd.cshtml
+++ b/EchecWeb/Views/Chess/SelectionEnd.cshtml
@@ -22,61 +22,61 @@
             {
                 if (echiquier[i, y] is null)
                 {
-                    <button class="caseB" onclick="selectionCase(@i,@y)"></button>
+                    <button class="caseB" onclick="selectionEnd(@i,@y)"></button>
                 }
                 else if (echiquier[i, y] != null && echiquier[i, y].couleur)
                 {
 
                     if (echiquier[i, y] is Fou)
                     {
-                        <button class="caseB" onclick="selectionCase(@i,@y)"><img src="~/images/Fb.png" /></button>
+                        <button class="caseB" onclick="selectionEnd(@i,@y)"><img src="~/images/Fb.png" /></button>
                     }
                     else if (echiquier[i, y] is Cavalier)
                     {
-                        <button class="caseB" onclick="selectionCase(@i,@y)"><img src="~/images/Cb.png" /></button>
+                        <button class="caseB" onclick="selectionEnd(@i,@y)"><img src="~/images/Cb.png" /></button>
                     }
                     else if (echiquier[i, y] is Tour)
                     {
-                        <button class="caseB" onclick="selectionCase(@i,@y)"><img src="~/images/Tb.png" /></button>
+                        <button class="caseB" onclick="selectionEnd(@i,@y)"><img src="~/images/Tb.png" /></button>
                     }
                     else if (echiquier[i, y] is Pion)
                     {
-                        <button class="caseB" onclick="selectionCase(@i,@y)"><img src="~/images/Pb.png" /></button>
+                        <button class="caseB" onclick="selectionEnd(@i,@y)"><img src="~/images/Pb.png" /></button>
                     }
                     else if (echiquier[i, y] is Roi)
                     {
-                        <button class="caseB" onclick="selectionCase(@i,@y)"><img src="~/images/Kb.png" /></button>
+                        <button class="caseB" onclick="selectionEnd(@i,@y)"><img src="~/images/Kb.png" /></button>
                     }
                     else if (echiquier[i, y] is Reine)
                     {
-                        <button class="caseB" onclick="selectionCase(@i,@y)"><img src="~/images/Qb.png" /></button>
+                        <button class="caseB" onclick="selectionEnd(@i,@y)"><img src="~/images/Qb.png" /></button>
                     }
                 }
                 else if (echiquier[i, y] != null && echiquier[i, y].couleur == false)
                 {
                     if (echiquier[i, y] is Fou)
                     {
-                        <button class="caseB" onclick="selectionCase(@i,@y)"><img src="~/images/Fn.png" /></button>
+                        <button class="caseB" onclick="selectionEnd(@i,@y)"><img src="~/images/Fn.png" /></button>
                     }
                     else if (echiquier[i, y] is Cavalier)
                     {
-                        <button class="caseB" onclick="selectionCase(@i,@y)"><img src="~/images/cn.png" /></button>
+                        <button class="caseB" onclick="selectionEnd(@i,@y)"><img src="~/images/cn.png" /></button>
                     }
                     else if (echiquier[i, y] is Tour)
                     {
-                        <button class="caseB" onclick="selectionCase(@i,@y)"><img src="~/images/Tn.png" /></button>
+                        <button class="caseB" onclick="selectionEnd(@i,@y)"><img src="~/images/Tn.png" /></button>
                     }
                     else if (echiquier[i, y] is Pion)
                     {
-                        <button class="caseB" onclick="selectionCase(@i,@y)"><img src="~/images/Pn.png" /></button>
+                        <button class="caseB" onclick="selectionEnd(@i,@y)"><img src="~/images/Pn.png" /></button>
                     }
                     else if (echiquier[i, y] is Roi)
                     {
-                        <button class="caseB" onclick="selectionCase(@i,@y)"><img src="~/images/Kn.png" /></button>
+                        <button class="caseB" onclick="selectionEnd(@i,@y)"><img src="~/images/Kn.png" /></button>
                     }
                     else if (echiquier[i, y] is Reine)
                     {
-                        <button class="caseB" onclick="selectionCase(@i,@y)"><img src="~/images/Qn.png" /></button>
+                        <button class="caseB" onclick="selectionEnd(@i,@y)"><img src="~/images/Qn.png" /></button>
                     }
                 }
             }
@@ -84,61 +84,61 @@
             {
                 if (echiquier[i, y] is null)
                 {
-                    <button class="caseN" onclick="selectionCase(@i,@y)"></button>
+                    <button class="caseN" onclick="selectionEnd(@i,@y)"></button>
                 }
                 else if (echiquier[i, y] != null && echiquier[i, y].couleur)
                 {
 
                     if (echiquier[i, y] is Fou)
                     {
-                        <button class="caseN" onclick="selectionCase(@i,@y)"><img src="~/images/Fb.png" /></button>
+                        <button class="caseN" onclick="selectionEnd(@i,@y)"><img src="~/images/Fb.png" /></button>
                     }
                     else if (echiquier[i, y] is Cavalier)
                     {
-                        <button class="caseN" onclick="selectionCase(@i,@y)"><img src="~/images/Cb.png" /></button>
+                        <button class="caseN" onclick="selectionEnd(@i,@y)"><img src="~/images/Cb.png" /></button>
                     }
                     else if (echiquier[i, y] is Tour)
                     {
-                        <button class="caseN" onclick="selectionCase(@i,@y)"><img src="~/images/Tb.png" /></button>
+                        <button class="caseN" onclick="selectionEnd(@i,@y)"><img src="~/images/Tb.png" /></button>
                     }
                     else if (echiquier[i, y] is Pion)
                     {
-                        <button class="caseN" onclick="selectionCase(@i,@y)"><img src="~/images/Pb.png" /></button>
+                        <button class="caseN" onclick="selectionEnd(@i,@y)"><img src="~/images/Pb.png" /></button>
                     }
                     else if (echiquier[i, y] is Roi)
                     {
-                        <button class="caseN" onclick="selectionCase(@i,@y)"><img src="~/images/Kb.png" /></button>
+                        <button class="caseN" onclick="selectionEnd(@i,@y)"><img src="~/images/Kb.png" /></button>
                     }
                     else if (echiquier[i, y] is Reine)
                     {
-                        <button class="caseN" onclick="selectionCase(@i,@y)"><img src="~/images/Qb.png" /></button>
+                        <button class="caseN" onclick="selectionEnd(@i,@y)"><img src="~/images/Qb.png" /></button>
                     }
                 }
                 else if (echiquier[i, y] != null && echiquier[i, y].couleur == false)
                 {
                     if (echiquier[i, y] is Fou)
                     {
-                        <button class="caseN" onclick="selectionCase(@i,@y)"><img src="~/images/Fn.png" /></button>
+                        <button class="caseN" onclick="selectionEnd(@i,@y)"><img src="~/images/Fn.png" /></button>
                     }
                     else if (echiquier[i, y] is Cavalier)
                     {
-                        <button class="caseN" onclick="selectionCase(@i,@y)"><img src="~/images/Cn.png" /></button>
+                        <button class="caseN" onclick="selectionEnd(@i,@y)"><img src="~/images/Cn.png" /></button>
                     }
                     else if (echiquier[i, y] is Tour)
                     {
-                        <button class="caseN" onclick="selectionCase(@i,@y)"><img src="~/images/Tn.png" /></button>
+                        <button class="caseN" onclick="selectionEnd(@i,@y)"><img src="~/images/Tn.png" /></button>
                     }
                     else if (echiquier[i, y] is Pion)
                     {
-                        <button class="caseN" onclick="selectionCase(@i,@y)"><img src="~/images/Pn.png" /></button>
+                        <button class="caseN" onclick="selectionEnd(@i,@y)"><img src="~/images/Pn.png" /></button>
                     }
                     else if (echiquier[i, y] is Roi)
                     {
-                        <button class="caseN" onclick="selectionCase(@i,@y)"><img src="~/images/Kn.png" /></button>
+                        <button class="caseN" onclick="selectionEnd(@i,@y)"><img src="~/images/Kn.png" /></button>
                     }
                     else if (echiquier[i, y] is Reine)
                     {
-                        <button class="caseN" onclick="selectionCase(@i,@y)"><img src="~/images/Qn.png" /></button>
+                        <button class="caseN" onclick="selectionEnd(@i,@y)"><img src="~/images/Qn.png" /></button>
                     }
                 }
             }
@@ -148,9 +148,10 @@
 }
 
 <script>
-    function selectionCase(i, y) {
+
+    function selectionEnd(i, y) {
         // je fabrique l'url à appeler :
-        var url = "/chess/plateau/selectStart/" + i + "/" + y;
+        var url = "/chess/plateau/selectEnd/" + i + "/" + y;
         // redirection vers l'url :
         location.href = url;
     }
