--- a/EchecWeb/Views/Shared/_Layout.cshtml
+++ b/EchecWeb/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li><a asp-area="" asp-controller="Chess" asp-action="Plateau">Plateau de Jeu</a></li>
+                    <li><a asp-area="" asp-controller="chess" asp-action="plateau">Plateau de Jeu</a></li>
                 </ul>
             </div>
         </div>
