Couleur au lieu de couleur

--- a/EchecWeb/Views/Chess/Index.cshtml
+++ b/EchecWeb/Views/Chess/Index.cshtml
@@ -24,7 +24,7 @@
                 {
                     <button class="caseB" onclick="selectionCase(@i,@y)"></button>
                 }
-                else if (echiquier[i, y] != null && echiquier[i, y].couleur)
+                else if (echiquier[i, y] != null && echiquier[i, y].Couleur)
                 {
 
                     if (echiquier[i, y] is Fou)
@@ -52,7 +52,7 @@
                         <button class="caseB" onclick="selectionCase(@i,@y)"><img src="~/images/Qb.png" /></button>
                     }
                 }
-                else if (echiquier[i, y] != null && echiquier[i, y].couleur == false)
+                else if (echiquier[i, y] != null && echiquier[i, y].Couleur == false)
                 {
                     if (echiquier[i, y] is Fou)
                     {
@@ -86,7 +86,7 @@
                 {
                     <button class="caseN" onclick="selectionCase(@i,@y)"></button>
                 }
-                else if (echiquier[i, y] != null && echiquier[i, y].couleur)
+                else if (echiquier[i, y] != null && echiquier[i, y].Couleur)
                 {
 
                     if (echiquier[i, y] is Fou)
@@ -114,7 +114,7 @@
                         <button class="caseN" onclick="selectionCase(@i,@y)"><img src="~/images/Qb.png" /></button>
                     }
                 }
-                else if (echiquier[i, y] != null && echiquier[i, y].couleur == false)
+                else if (echiquier[i, y] != null && echiquier[i, y].Couleur == false)
                 {
                     if (echiquier[i, y] is Fou)
                     {
